fixed smaller issued

--- a/appendix/hist_intprob.tex
+++ b/appendix/hist_intprob.tex
@@ -18,7 +18,7 @@
     \caption{Input similarity for PIP(3).}
   \end{subfigure}
 
-  \caption{Histogram for \texttt{n\_Cpfcand} for multiple iterations of PIP tested against nominal inputs.}
+  \caption{Histogram of \texttt{n\_Cpfcand} for multiple iterations of PIP tested against nominal inputs.}
   \label{fig:intprob_input_n_Cpfcand}
 \end{figure}
 \begin{figure}[h]
@@ -36,7 +36,7 @@
     \caption{Input similarity for PIP(3).}
   \end{subfigure}
 
-  \caption{Histogram for \texttt{n\_Npfcand} for multiple iterations of PIP tested against nominal inputs.}
+  \caption{Histogram of \texttt{n\_Npfcand} for multiple iterations of PIP tested against nominal inputs.}
   \label{fig:intprob_input_n_Npfcand}
 \end{figure}
 \begin{figure}[h]
@@ -54,7 +54,7 @@
     \caption{Input similarity for PIP(3).}
   \end{subfigure}
 
-  \caption{Histogram for \texttt{npv} for multiple iterations of PIP tested against nominal inputs.}
+  \caption{Histogram of \texttt{npv} for multiple iterations of PIP tested against nominal inputs.}
   \label{fig:intprob_input_npv}
 \end{figure}
 \begin{figure}[h]
@@ -72,7 +72,7 @@
     \caption{Input similarity for PIP(3).}
   \end{subfigure}
 
-  \caption{Histogram for \texttt{nsv} for multiple iterations of PIP tested against nominal inputs.}
+  \caption{Histogram of \texttt{nsv} for multiple iterations of PIP tested against nominal inputs.}
   \label{fig:intprob_input_nsv}
 \end{figure}
 \begin{figure}[h]
@@ -90,7 +90,7 @@
     \caption{Input similarity for PIP(3).}
   \end{subfigure}
 
-  \caption{Histogram for \texttt{TagVarCSV\_jetNSelectedTracks} for multiple iterations of PIP tested against nominal inputs.}
+  \caption{Histogram of \texttt{TagVarCSV\_jetNSelectedTracks} for multiple iterations of PIP tested against nominal inputs.}
   \label{fig:intprob_input_TagVarCSV_jetNSelectedTracks}
 \end{figure}
 \begin{figure}[h]
@@ -108,7 +108,7 @@
     \caption{Input similarity for PIP(3).}
   \end{subfigure}
 
-  \caption{Histogram for \texttt{TagVarCSV\_jetNTracksEtaRel} for multiple iterations of PIP tested against nominal inputs.}
+  \caption{Histogram of \texttt{TagVarCSV\_jetNTracksEtaRel} for multiple iterations of PIP tested against nominal inputs.}
   \label{fig:intprob_input_TagVarCSV_jetNTracksEtaRel}
 \end{figure}
 \begin{figure}[h]
@@ -126,7 +126,7 @@
     \caption{Input similarity for PIP(3).}
   \end{subfigure}
 
-  \caption{Histogram for \texttt{TagVarCSV\_vertexCategory} for multiple iterations of PIP tested against nominal inputs.}
+  \caption{Histogram of \texttt{TagVarCSV\_vertexCategory} for multiple iterations of PIP tested against nominal inputs.}
   \label{fig:intprob_input_TagVarCSV_vertexCategory}
 \end{figure}
 
@@ -149,7 +149,7 @@
     \caption{Input similarity for PIP(3).}
   \end{subfigure}
 
-  \caption{Histogram for \texttt{Cpfcan\_quality} for multiple iterations of PIP tested against nominal inputs.}
+  \caption{Histogram of \texttt{Cpfcan\_quality} for multiple iterations of PIP tested against nominal inputs.}
   \label{fig:intprob_input_Cpfcan_quality}
 \end{figure}
 \begin{figure}[h]
@@ -167,7 +167,7 @@
     \caption{Input similarity for PIP(3).}
   \end{subfigure}
 
-  \caption{Histogram for \texttt{Cpfcan\_VTX\_ass} for multiple iterations of PIP tested against nominal inputs.}
+  \caption{Histogram of \texttt{Cpfcan\_VTX\_ass} for multiple iterations of PIP tested against nominal inputs.}
   \label{fig:intprob_input_Cpfcan_VTX_ass}
 \end{figure}
 
@@ -189,7 +189,7 @@
     \caption{Input similarity for PIP(3).}
   \end{subfigure}
 
-  \caption{Histogram for \texttt{Npfcan\_HadFrac} for multiple iterations of PIP tested against nominal inputs.}
+  \caption{Histogram of \texttt{Npfcan\_HadFrac} for multiple iterations of PIP tested against nominal inputs.}
   \label{fig:intprob_input_Npfcan_HadFrac}
 \end{figure}
 \begin{figure}[h]
@@ -207,6 +207,6 @@
     \caption{Input similarity for PIP(3).}
   \end{subfigure}
 
-  \caption{Histogram for \texttt{Npfcan\_isGamma} for multiple iterations of PIP tested against nominal inputs.}
+  \caption{Histogram of \texttt{Npfcan\_isGamma} for multiple iterations of PIP tested against nominal inputs.}
   \label{fig:intprob_input_Npfcan_isGamma}
 \end{figure}
