--- a/thesis/acronyms.tex
+++ b/thesis/acronyms.tex
@@ -29,7 +29,7 @@
 % --- 04 Adversarial ML
 \newacronym[sort=04-01]{fgsm}{FGSM}{Fast Gradient Sign Method}
 \newacronym[sort=04-02]{pgd}{PGD}{Projected Gradient Descent}
-\newacronym[sort=04-03]{intprob}{IntProb}{Probabilistic Integer Perturbation}
+\newacronym[sort=04-03]{intprob}{PIP}{Probabilistic Integer Perturbation}
 \newacronym[sort=04-03]{pip-pgd}{PIP-PGD}{Probabilistic Integer-Perturbed Projected Gradient Descent}
 
 % --- 05 Metrics
