--- a/thesis/machine_learning.tex
+++ b/thesis/machine_learning.tex
@@ -23,7 +23,7 @@ Applying adversarial attacks in HEP is challenging due to the constrained realm 
 
 \subsection{Adversarial training}
 
-Adversarial training is a defence technique wherein the model is trained on deliberately perturbed examples in addition to the nominal data. In practice, this means augmenting each training batch with adversarial modified inputs and using them with the correct labels to update model parameters (see Figure \ref{fig:adversarial_training}). By learning from these fraudulent examples, the model's decision boundaries become smoother and less sensitive to tiny fluctuations in input features \cite{goodfellow2015explainingharnessingadversarialexamples}.
+Adversarial training is a defence technique wherein the model is trained on deliberately perturbed examples in addition to the nominal data. In practice, this means augmenting each training batch with adversarial modified inputs and using them with the correct labels to update model parameters (see figure \ref{fig:adversarial_training}). By learning from these fraudulent examples, the model's decision boundaries become smoother and less sensitive to tiny fluctuations in input features \cite{goodfellow2015explainingharnessingadversarialexamples}.
 
 \begin{figure}
     \centering
