--- a/thesis/methodology.tex
+++ b/thesis/methodology.tex
@@ -10,7 +10,7 @@ This chapter outlines the methodological framework of this thesis, designed to s
 \label{sec:dataset}
 
 As DeepJet’s input feature set is extremely rich, comprising hundreds of variables that describe each jet’s constituents and related vertices \cite{Bols_2020}, training for the scope of this thesis was carried on a smaller subset of the data containing roughly 10 million jets (see Table \ref{tab:dataset}). For each jet, up to 25 charged particle-flow (PF) candidates, 25 neutral PF candidates, and up to 4 secondary vertices are considered, in addition to a set of global jet-level features \cite{Bols_2020}. To keep the data representation uniform, if a jet has fewer constituents than the maximum, placeholder values (zeros) are used for the missing entries. All inputs are standardized to physically meaningful ranges or default values. Below is a
-summary for each feature groups used in DeepJet. An overview of all features and their respective descriptions is attached in Tables \ref{tab:global_input_features} to \ref{tab:sv_input_features}.
+summary for each feature group used in DeepJet. An overview of all features and their respective descriptions is attached in Tables \ref{tab:global_input_features} to \ref{tab:sv_input_features}.
 
 
 
@@ -159,13 +159,13 @@ D_{KL}=\sum_{x\in\chi} P(x) \log{\frac{P(x)}{Q(x)}}
 \label{eq:kullback-leibler}.
 \end{equation}
 
-A low JSD (close to zero) indicates that the perturbed inputs are almost indistinguishable from nominal inputs in those one-dimensional projections, even though they may be arranged so as to fool the ML  model\footnote{This can happen though intentional mismodelling where bins get switched while retaining their local scale and is not in the scope of this thesis.} \cite{saala2025enforcingfundamentalrelationsadversarial}. This is useful to assess how \textit{stealthy} a given attack is in a statistical sense. For instance, a study found that for certain attacks the average JSD for key kinematic distributions is on the order of $\mathcal{O}(10^{-3})$, indicating very minor differences \cite{saala2025enforcingfundamentalrelationsadversarial}. 
+A low JSD (close to zero) indicates that the perturbed inputs are almost indistinguishable from nominal inputs in those one-dimensional projections, even though they may be arranged so as to fool the ML  model\footnote{This can happen through intentional mismodelling where bins get switched while retaining their local scale and is not in the scope of this thesis.} \cite{saala2025enforcingfundamentalrelationsadversarial}. This is useful to assess how \textit{stealthy} a given attack is in a statistical sense. For instance, a study found that for certain attacks the average JSD for key kinematic distributions is on the order of $\mathcal{O}(10^{-3})$, indicating very minor differences \cite{saala2025enforcingfundamentalrelationsadversarial}. 
 
-Equations (\ref{eq:jsd}) and (\ref{eq:kullback-leibler}) formalize the definitions of JSD and KL divergence. The bins for the JSD calculations were chosen separately between continuous and discrete input features, where continuous bins are based on the Freedman-Diaconis rule \cite{Freedman1981} and the binning for discrete values correspond to a linear range between feature minima/maxima with step size of one. In essence, JSD provides a single summary number to quantify input similarity, complementing other measures used such as differences in correlation matrices, visual inspection of feature histograms, etc. Going forward, the JSD is presented for various features under different attack scenarios, to confirm that the proposed adversarial attack strategies meet the design criterion of stealthiness.
+Equations (\ref{eq:jsd}) and (\ref{eq:kullback-leibler}) formalize the definitions of JSD and KL divergence. The bins for the JSD calculations were chosen separately between continuous and discrete input features, where continuous bins are based on the Freedman-Diaconis rule \cite{Freedman1981} and the binning for discrete values correspond to a linear range between feature minima/maxima with a step size of one. In essence, JSD provides a single summary number to quantify input similarity, complementing other measures used such as differences in correlation matrices, visual inspection of feature histograms, etc. Going forward, the JSD is presented for various features under different attack scenarios, to confirm that the proposed adversarial attack strategies meet the design criterion of stealthiness.
 
 \subsection*{Threat Model}
 
-In this thesis, a white-box threat model is assumed. This means the adversary is assumed to have full knowledge of the model architecture and parameters (the trained DeepJet model) and is able compute gradients with respect to the input. The attacker also has access to the same input features that are used in the model – in this case, the simulated truth labels for jets. The adversarial perturbations are constrained to be small in magnitude – consistent with potential detector effects or plausible data manipulation. This is tied towards real scenarios by noting that small changes in input features could arise from, e.g. slight miscalibrations of the detector or uncertainties in reconstruction algorithms. Thus, the attacks discussed can be thought of as deliberately structured mismodelling that an attacker might introduce.
+In this thesis, a white-box threat model is assumed. This means the adversary is assumed to have full knowledge of the model architecture and parameters (the trained DeepJet model) and is able to compute gradients with respect to the input. The attacker also has access to the same input features that are used in the model – in this case, the simulated truth labels for jets. The adversarial perturbations are constrained to be small in magnitude – consistent with potential detector effects or plausible data manipulation. This is tied to real scenarios by noting that small changes in input features could arise from, e.g. slight miscalibrations of the detector or uncertainties in reconstruction algorithms. Thus, the attacks discussed can be thought of as deliberately structured mismodelling that an attacker might introduce.
 
 The attacker is not assumed to be able to change the model on the fly. All attacks are either done on the trained model in a post-training evaluation setting or as an adversarial input set during the training procedure. Also only feature-level attacks are considered, not physically shifting detector readouts – the attacker can adjust the input values fed to the algorithm (within realistic bounds) but it does not impose that unaltered features remain consistent. For example, an attacker cannot create a jet out of thin air; they can only tweak existing feature values of a jet. Consequently, all attacks are subject to a prior selection of valid input features, based on a masking described in the next chapter.
 
@@ -217,12 +217,12 @@ x_i^{\text{adv,int}} = x_i + \epsilon \cdot \varepsilon_{ii} \cdot \operatorname
 \label{eq:fgsm_naive_int}
 \end{equation}
 
-This direct application allows the gradient to perturb integer features by a fractional amount. For example, if $x_i$ represents a count in a simplified case where $\varepsilon_{ii}\equiv1$, and the gradient $\nabla_{x_i} J$ is positive, then Equation (\ref{eq:fgsm_naive_int}) would increment the count by $\epsilon$, potentially resulting in a non-integer value. Such values are non-physical, since one cannot have fractional tracks; similarly, a negative perturbation could result in a count going below zero (e.g. $0-0.2=-0.2$ tracks). These invalid states illustrate the main drawback of the naive method. Consequently, the naive approach fails dramatically at generalizing for the perturbed input set, which can be seen in Figures \ref{fig:intpgd_train}, \ref{fig:intpgd_roc}. 
+This direct application allows the gradient to perturb integer features by a fractional amount. For example, if $x_i$ represents a count in a simplified case where $\varepsilon_{ii}\equiv1$, and the gradient $\nabla_{x_i} J$ is positive, then Equation (\ref{eq:fgsm_naive_int}) would increment the count by $\epsilon$, potentially resulting in a non-integer value. Such values are non-physical, since one cannot have fractional tracks; similarly, a negative perturbation could result in a count going below zero (e.g. $0-0.2=-0.2$ tracks). These invalid states illustrate the main drawback of the naive method. Consequently, the naive approach fails dramatically at generalizing for the perturbed input set, which can be seen in figure \ref{fig:intpgd_train}. 
 
 
 \subsection{Projected Gradient Descent}
 
-While FGSM provides a quick, one–shot probe of model vulnerability, it often underestimates the true  worst-case loss increase because it is restricted to a single gradient step.  Projected Gradient Descent (PGD) extends FGSM into a multi-step procedure that iteratively walks the input towards regions of higher loss while re-projecting the perturbed sample back into an $\ell_{\infty}$–ball of radius $\varepsilon:=\epsilon\cdot\varepsilon_{ii}$ around the original input \cite{madry2019deeplearningmodelsresistant}. This makes PGD the de-facto "gold standard" white-box adversary for continuous domains.
+While FGSM provides a quick, one–shot probe of model vulnerability, it often underestimates the true  worst-case loss increase because it is restricted to a single gradient step.  Projected Gradient Descent (PGD) extends FGSM into a multi-step procedure that iteratively walks the input towards regions of higher loss while re-projecting the perturbed sample back into an $\ell_{\infty}$–ball of radius $\varepsilon:=\epsilon\cdot\varepsilon_{ii}$ around the original input. This makes PGD the de facto "gold standard" white-box adversary for continuous domains \cite{madry2019deeplearningmodelsresistant}.
 
 For each iteration $t\!=\!0,\dots,k{-}1$ only the floating-point coordinates
 $x_i\!\in\!\mathcal{M}_{\text{float}}$ are updated,
@@ -248,7 +248,7 @@ where $x^{(0)}$ is the clean input, $\alpha$ is the per-step step-size
 \section{Probabilistic Integer Perturbation}
 \label{sec:intprob_methodology}
 
-Having identified the shortcomings of standard FGSM on discrete features, a novel attack method – Probabilistic Integer Perturbation (PIP) – that respects the discreteness of certain inputs gets discussed here. Instead of adding a fraction $\epsilon$ to an integer-valued feature, PIP uses the gradient information to decide whether or not to step an integer value to a neighbouring value. Crucially, this decision is made stochastically, via a Bernoulli trial whose probability is derived from the gradient magnitude. In this way, PIP can be thought as a stochastic FGSM tailored to discrete variables, ensuring that outputs remain in the integer domain.
+Having identified the shortcomings of standard FGSM on discrete features, a novel attack method – Probabilistic Integer Perturbation (PIP) – that respects the discreteness of certain inputs is discussed here. Instead of adding a fraction $\epsilon$ to an integer-valued feature, PIP uses the gradient information to decide whether or not to step an integer value to a neighbouring value. Crucially, this decision is made stochastically, via a Bernoulli trial whose probability is derived from the gradient magnitude. In this way, PIP can be thought of as a stochastic FGSM tailored to discrete variables, ensuring that outputs remain in the integer domain.
 
 The scheme is defined in Equation (\ref{eq:intprob})
 
@@ -266,7 +266,7 @@ x_i^{\text{adv}} &=
 \label{eq:intprob}
 \end{equation}
 
-where $\mathcal{L}=J(\Theta,x,y)$ is the loss and $\max{\nabla_{x_i} \mathcal{L}}$ denotes the maximum absolute gradient among all features (or specifically among integer features – the formulation can be restricted to the $\mathcal{M}_{\text{int}}^*$ subset). A small positive constant $c=10^{-8}$ is added inside of the denominator to avoid division by zero issues. In practice this has a negligible effect though. The term $p_i$ is essentially a normalized and rescaled version of the gradient magnitude for feature $i$. After dividing by the global maximum gradient, it is capped to $1$, and then raised to a power $s$ (the \textit{sharpness} hyperparameter)—thus $p_i \in [0,1]$. A Bernoulli random variable $u_i\in\{0,1\}$ is then drawn with the success probability $p_i$. If $u_i=1$, the feature $i$ is then perturbed by adding or subtraction one unit in the direction of the gradient's sign. If $u_i=0$, the feature is left unchanged. By construction, this produces an integer adversarial example for integer features, since only whole units get added or subtracted.
+where $\mathcal{L}=J(\Theta,x,y)$ is the loss and $\max{\nabla_{x_i} \mathcal{L}}$ denotes the maximum absolute gradient among all features (or specifically among integer features – the formulation can be restricted to the $\mathcal{M}_{\text{int}}^*$ subset). A small positive constant $c=10^{-8}$ is added to the denominator to avoid division by zero issues. In practice this has a negligible effect though. The term $p_i$ is essentially a normalized and rescaled version of the gradient magnitude for feature $i$. After dividing by the global maximum gradient, it is capped to $1$, and then raised to a power $s$ (the \textit{sharpness} hyperparameter)—thus $p_i \in [0,1]$. A Bernoulli random variable $u_i\in\{0,1\}$ is then drawn with the success probability $p_i$. If $u_i=1$, the feature $i$ is then perturbed by adding or subtracting one unit in the direction of the gradient's sign. If $u_i=0$, the feature is left unchanged. By construction, this produces an integer adversarial example for integer features, since only whole units get added or subtracted.
 
 To build intuition, consider $s=1$ initially. Then $p_i$ is directly proportional to 
 $\nabla_{x_i} \mathcal{L}$. In this case, each integer feature is flipped with probability proportional to how sensitive the model’s loss is to that feature. If a feature’s gradient is very small relative to others, its flip probability will be near zero, meaning it is very unlikely to waste perturbation budget on a feature that doesn’t affect the outcome. Contrary, if a feature has the largest gradient, it gets $p\approx1$ and will almost certainly be flipped. Introducing the sharpness parameter $s>0$ allows to adjust this distribution. If $s>1$, then probabilities are raised to a higher power, which sharpens the distribution: features with $P_i<1$ will have their probability pushed lower and any feature that was at the maximum (with raw probability 1) remains at 1. Thus, higher $s$ makes PIP more aggressively focus on the top-gradient features (many low-gradient features will effectively get probability nearly 0). Conversely, if $0<s<1$, the distribution flattens: even features with smaller gradients get a relatively higher chance to flip. Tuning $s$ thus controls how many integer features on average will be perturbed in one attack instance. A larger $s$ yields sparser attacks (fewer features changed, targeting only the most “salient” ones), while a smaller $s$ yields more widespread changes. In this study, PIP gets applied across a range of $s$ values to examine the sensitivity.
@@ -295,6 +295,6 @@ x_i^{\text{adv}} =
 \label{eq:joint_attack}
 \end{equation}
 
-where $x^{\text{adv,float}}_i$ is produced by a PGD attack (\ref{eq:fgsm}) on continuous features and $x^{\text{adv,int}}_i$ is produced by an PIP attack (\ref{eq:intprob}) on the integer features. In words, a float-space attack and an int-space attack is run in parallel, each acting on different components of the input. The feature sets are disjoint ($\mathcal{M_{\text{float}}} \wedge \mathcal{M_{\text{int}}}=\emptyset$), therefore the perturbations do not directly conflict or overlap. Accordingly continuous and discrete parts can be treated independently first and then combined to form a full adversarial input.
+where $x^{\text{adv,float}}_i$ is produced by a PGD attack (\ref{eq:fgsm}) on continuous features and $x^{\text{adv,int}}_i$ is produced by a PIP attack (\ref{eq:intprob}) on the integer features. In words, a float-space attack and an int-space attack is run in parallel, each acting on different components of the input. The feature sets are disjoint ($\mathcal{M_{\text{float}}} \wedge \mathcal{M_{\text{int}}}=\emptyset$), therefore the perturbations do not directly conflict or overlap. Accordingly continuous and discrete parts can be treated independently first and then combined to form a full adversarial input.
 
-There are a few choices to clarify in this combined procedure. One question is whether to compute gradients once or twice for the two subsets. In this implementation, the gradient of the loss with respect to the entire input is taken once per iteration and then used for both the PGD update on continuous features and the probability computation in PIP for discrete features. This ensures that the continuous and discrete perturbations are based on the same “view” of the input’s vulnerability. This also ensures that both attacks commute, so that the order of application is uncorrelated.
+There are a few choices to clarify in this combined procedure. One question is whether to compute gradients once or twice for the two subsets. In this implementation, the gradient of the loss with respect to the entire input is taken once per iteration and then used for both the PGD update on continuous features and the probability computation in PIP for discrete features. This ensures that the continuous and discrete perturbations are based on the same “view” of the input’s vulnerability. It also ensures that both attacks commute, so that the order of application is uncorrelated.
