--- a/appendix/hist_combined.tex
+++ b/appendix/hist_combined.tex
@@ -19,7 +19,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{jet\_eta} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{jet\_eta} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_jet_eta}
 \end{figure}
 
@@ -38,7 +38,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{jet\_pt} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{jet\_pt} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_jet_pt}
 \end{figure}
 
@@ -57,7 +57,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{n\_Cpfcand} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{n\_Cpfcand} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_n_Cpfcand}
 \end{figure}
 
@@ -76,7 +76,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{n\_Npfcand} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{n\_Npfcand} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_n_Npfcand}
 \end{figure}
 
@@ -95,7 +95,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{npv} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{npv} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_npv}
 \end{figure}
 
@@ -114,7 +114,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{nsv} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{nsv} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_nsv}
 \end{figure}
 
@@ -133,7 +133,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{TagVarCSV\_jetNSelectedTracks} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{TagVarCSV\_jetNSelectedTracks} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_TagVarCSV_jetNSelectedTracks}
 \end{figure}
 
@@ -152,7 +152,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{TagVarCSV\_jetNTracksEtaRel} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{TagVarCSV\_jetNTracksEtaRel} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_TagVarCSV_jetNTracksEtaRel}
 \end{figure}
 
@@ -171,7 +171,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{TagVarCSV\_trackSip2dSigAboveCharm} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{TagVarCSV\_trackSip2dSigAboveCharm} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_TagVarCSV_trackSip2dSigAboveCharm}
 \end{figure}
 
@@ -190,7 +190,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{TagVarCSV\_trackSumJetDeltaR} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{TagVarCSV\_trackSumJetDeltaR} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_TagVarCSV_trackSumJetDeltaR}
 \end{figure}
 
@@ -209,7 +209,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{TagVarCSV\_trackSip2dValAboveCharm} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{TagVarCSV\_trackSip2dValAboveCharm} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_TagVarCSV_trackSip2dValAboveCharm}
 \end{figure}
 
@@ -228,7 +228,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{TagVarCSV\_trackSip3dSigAboveCharm} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{TagVarCSV\_trackSip3dSigAboveCharm} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_TagVarCSV_trackSip3dSigAboveCharm}
 \end{figure}
 
@@ -247,7 +247,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{TagVarCSV\_trackSip3dValAboveCharm} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{TagVarCSV\_trackSip3dValAboveCharm} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_TagVarCSV_trackSip3dValAboveCharm}
 \end{figure}
 
@@ -266,7 +266,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{TagVarCSV\_trackSumJetDeltaR} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{TagVarCSV\_trackSumJetDeltaR} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_TagVarCSV_trackSumJetDeltaR}
 \end{figure}
 
@@ -285,7 +285,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{TagVarCSV\_trackSumJetEtRatio} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{TagVarCSV\_trackSumJetEtRatio} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_TagVarCSV_trackSumJetEtRatio}
 \end{figure}
 
@@ -304,7 +304,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{TagVarCSV\_vertexCategory} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{TagVarCSV\_vertexCategory} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_TagVarCSV_vertexCategory}
 \end{figure}
 
@@ -327,7 +327,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{Cpfcan\_chi2} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{Cpfcan\_chi2} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_Cpfcan_chi2}
 \end{figure}
 
@@ -346,7 +346,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{Cpfcan\_chi2} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{Cpfcan\_chi2} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_Cpfcan_chi2}
 \end{figure}
 
@@ -365,7 +365,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{Cpfcan\_drminsv} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{Cpfcan\_drminsv} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_Cpfcan_drminsv}
 \end{figure}
 
@@ -384,7 +384,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{Cpfcan\_ptrel} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{Cpfcan\_ptrel} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_Cpfcan_ptrel}
 \end{figure}
 
@@ -403,7 +403,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{Cpfcan\_puppiw} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{Cpfcan\_puppiw} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_Cpfcan_puppiw}
 \end{figure}
 
@@ -422,7 +422,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{Cpfcan\_quality} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{Cpfcan\_quality} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_Cpfcan_quality}
 \end{figure}
 
@@ -441,7 +441,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{Cpfcan\_VTX\_ass} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{Cpfcan\_VTX\_ass} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_Cpfcan_VTX_ass}
 \end{figure}
 
@@ -460,7 +460,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{Cpfcan\_BtagPf\_trackDeltaR} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{Cpfcan\_BtagPf\_trackDeltaR} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_Cpfcan_BtagPf_trackDeltaR}
 \end{figure}
 
@@ -479,7 +479,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{Cpfcan\_BtagPf\_trackEtaRel} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{Cpfcan\_BtagPf\_trackEtaRel} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_Cpfcan_BtagPf_trackEtaRel}
 \end{figure}
 
@@ -498,7 +498,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{Cpfcan\_BtagPf\_trackJetDistVal} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{Cpfcan\_BtagPf\_trackJetDistVal} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_Cpfcan_BtagPf_trackJetDistVal}
 \end{figure}
 
@@ -517,7 +517,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{Cpfcan\_BtagPf\_trackPPar} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{Cpfcan\_BtagPf\_trackPPar} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_Cpfcan_BtagPf_trackPPar}
 \end{figure}
 
@@ -536,7 +536,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{Cpfcan\_BtagPf\_trackPParRatio} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{Cpfcan\_BtagPf\_trackPParRatio} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_Cpfcan_BtagPf_trackPParRatio}
 \end{figure}
 
@@ -555,7 +555,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{Cpfcan\_BtagPf\_trackPtRel} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{Cpfcan\_BtagPf\_trackPtRel} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_Cpfcan_BtagPf_trackPtRel}
 \end{figure}
 
@@ -574,7 +574,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{Cpfcan\_BtagPf\_trackSip2dSig} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{Cpfcan\_BtagPf\_trackSip2dSig} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_Cpfcan_BtagPf_trackSip2dSig}
 \end{figure}
 
@@ -593,7 +593,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{Cpfcan\_BtagPf\_trackSip2dVal} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{Cpfcan\_BtagPf\_trackSip2dVal} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_Cpfcan_BtagPf_trackSip2dVal}
 \end{figure}
 
@@ -612,7 +612,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{Cpfcan\_BtagPf\_trackSip3dSig} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{Cpfcan\_BtagPf\_trackSip3dSig} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_Cpfcan_BtagPf_trackSip3dSig}
 \end{figure}
 
@@ -631,7 +631,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{Cpfcan\_BtagPf\_trackSip3dVal} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{Cpfcan\_BtagPf\_trackSip3dVal} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_Cpfcan_BtagPf_trackSip3dVal}
 \end{figure}
 
@@ -654,7 +654,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{Npfcan\_deltaR} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{Npfcan\_deltaR} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_Npfcan_deltaR}
 \end{figure}
 
@@ -673,7 +673,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{Npfcan\_drminsv} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{Npfcan\_drminsv} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_Npfcan_drminsv}
 \end{figure}
 
@@ -692,7 +692,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{Npfcan\_HadFrac} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{Npfcan\_HadFrac} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_Npfcan_HadFrac}
 \end{figure}
 
@@ -711,7 +711,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{Npfcan\_isGamma} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{Npfcan\_isGamma} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_Npfcan_isGamma}
 \end{figure}
 
@@ -730,7 +730,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{Npfcan\_ptrel} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{Npfcan\_ptrel} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_Npfcan_ptrel}
 \end{figure}
 
@@ -749,7 +749,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{Npfcan\_puppiw} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{Npfcan\_puppiw} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_Npfcan_puppiw}
 \end{figure}
 
@@ -772,7 +772,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{sv\_chi2} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{sv\_chi2} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_sv_chi2}
 \end{figure}
 
@@ -791,7 +791,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{sv\_costhetasvpv} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{sv\_costhetasvpv} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_sv_costhetasvpv}
 \end{figure}
 
@@ -810,7 +810,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{sv\_d3d} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{sv\_d3d} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_sv_d3d}
 \end{figure}
 
@@ -829,7 +829,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{sv\_d3dsig} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{sv\_d3dsig} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_sv_d3dsig}
 \end{figure}
 
@@ -848,7 +848,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{sv\_deltaR} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{sv\_deltaR} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_sv_deltaR}
 \end{figure}
 
@@ -867,7 +867,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{sv\_dxy} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{sv\_dxy} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_sv_dxy}
 \end{figure}
 
@@ -886,7 +886,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{sv\_dxysig} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{sv\_dxysig} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_sv_dxysig}
 \end{figure}
 
@@ -905,7 +905,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{sv\_enratio} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{sv\_enratio} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_sv_enratio}
 \end{figure}
 
@@ -924,7 +924,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{sv\_mass} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{sv\_mass} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_sv_mass}
 \end{figure}
 
@@ -943,7 +943,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{sv\_normchi2} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{sv\_normchi2} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_sv_normchi2}
 \end{figure}
 
@@ -962,7 +962,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{sv\_ntracks} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{sv\_ntracks} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_sv_ntracks}
 \end{figure}
 
@@ -981,7 +981,7 @@
     \caption*{Input similarity for PIP-PGD(3).}
   \end{subfigure}
 
-  \caption*{Histogram for \texttt{sv\_pt} for multiple iterations of PIP-PGD tested against nominal inputs.}
+  \caption*{Histogram of \texttt{sv\_pt} for multiple iterations of PIP-PGD tested against nominal inputs.}
   \label{fig:combined_input_sv_pt}
 \end{figure}
 
